--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PORT=3000
 NODE_ENV=development
 
 DB_TYPE=mongodb
-APP_NAME=BACKEND-API
+APP_NAME=BACKEND_API
 APP_DESCRIPTION="Full backend architecture"
 APP_AUTHOR="Barthez Kenwou"
 APP_VERSION=1.0.0
@@ -17,32 +17,53 @@ DISABLE_CONSOLE_LOGS=true
 DATABASE_URL="mongodb://admin:secret123@mongo:27017/appDB?authSource=admin"
 
 # MongoDB
+MONGO_NAME=BACKEND_DB
 MONGO_USER=admin
 MONGO_PASSWORD=secret123
 MONGO_DB=appDB
 MONGO_PORT=27017
 
+# Redis
+REDIS_NAME=BACKEND_CACHE
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 # MinIO
+MINIO_NAME=BACKEND_STORAGE
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minio123
 MINIO_PORT=9000
 MINIO_CONSOLE=9001
-MINIO_ENDPOINT=localhost
-MINIO_APP_BUCKET=my-app-uploads
+MINIO_ENDPOINT=minio
+MINIO_APP_BUCKET=gta
 MINIO_BASE_PATH=uploads/
-
-# Redis
-REDIS_HOST=redis
-REDIS_PORT=6379
+MINIO_USE_SSL=false
 
 # MailHog SMTP
+SMTP_NAME=BACKEND_MAIL
 SMTP_HOST=mailhog
 SMTP_PORT=1025
+SMTP_WEB_UI=8025
 SMTP_USER=smtp_user
 SMTP_PASS=smtp_password
 USER_EMAIL=kenwoubarthez@gmail.com
 
-HSTS_MAX_AGE=31536000
+# Nginx
+NGINX_NAME=BACKEND_NGINX
+NGINX_PORT=80
+NGINX_SSH=443
+NGINX_HOST=www.host.com
+
+# ClamAV Configuration
+
+CLAMAV_NAME=BACKEND_CLAMAV
+CLAMAV_HOST=clamav
+CLAMAV_PORT=3310
+CLAMAV_TIMEOUT=20000
+
+# File Upload Settings
+MAX_UPLOAD_SIZE=10485760  # 10MB
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf
 
 CLIENT_URL=http://localhost:5173
 CORS_ORIGIN=http://localhost:5173
@@ -58,6 +79,9 @@ MAX_GLOBAL_QUERY_NUMBER=100
 MAX_GLOBAL_QUERY_WINDOW=900000 # 15 minutes
 MAX_UNIQ_QUERY_NUMBER=50
 MAX_UNIQ_QUERY_WINDOW=900000 # 15 minutes
+
+# Security
+HSTS_MAX_AGE=31536000
 
 # Logging
 LOKI_ENABLED=false
