--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,278 +1,267 @@
-user  nginx;
-worker_processes  auto;
-worker_rlimit_nofile 65535;
+# Nginx Configuration
+# ==================
+# This configuration combines performance, security, and maintainability best practices.
+# All settings include explanatory comments for better understanding and maintenance.
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+# User and process configuration
+# ------------------------------
+user nginx;
+worker_processes auto;  # Automatically set based on CPU cores
+worker_rlimit_nofile 100000;  # Maximum number of open files per worker
 
+# Error logging
+# -------------
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+# Event context configuration
+# --------------------------
 events {
-    worker_connections  8192;
-    use epoll;                    # linux: epoll is best
-    multi_accept on;
+    worker_connections 8192;  # Connections per worker
+    multi_accept on;          # Accept multiple connections at once
+    use epoll;                # Efficient method for Linux
+    
+    # Optimize for many connections with multiple workers
+    accept_mutex on;
+    accept_mutex_delay 100ms;
 }
 
+# HTTP context
+# -----------
 http {
-    ## -----------------------
-    ## Basic performance
-    ## -----------------------
-    sendfile            on;
-    tcp_nopush          on;
-    tcp_nodelay         on;
-    keepalive_timeout   65;
-    types_hash_max_size 2048;
-    server_tokens       off;              # hide nginx version
-    client_max_body_size 50M;             # adjust to your needs
+    # MIME types and default type
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # buffers
-    client_body_buffer_size 16K;
+    # Basic performance settings
+    # -------------------------
+    sendfile on;              # Use sendfile for static files
+    tcp_nopush on;           # Optimize sendfile packets
+    tcp_nodelay on;          # Disable Nagle's algorithm
+    keepalive_timeout 30s;   # Time to keep connections open
+    keepalive_requests 100;  # Number of requests per connection
+    reset_timedout_connection on;  # Recycle timed-out connections
+    
+    # Buffer size optimizations
+    # ------------------------
+    client_body_buffer_size 16k;
     client_header_buffer_size 1k;
     large_client_header_buffers 4 8k;
-
-    ## -----------------------
-    ## Timeouts (protects resources)
-    ## -----------------------
+    output_buffers 2 1m;
+    postpone_output 1460;
+    
+    # Timeouts
+    # --------
     client_body_timeout 12s;
     client_header_timeout 12s;
     send_timeout 10s;
-
-    ## -----------------------
-    ## SSL / TLS global settings
-    ## -----------------------
+    
+    # SSL/TLS Configuration
+    # --------------------
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;                # recommended for forward secrecy
-    ssl_buffer_size 4k;
-
-    # Strong ciphers (modern + compat). Tweak to your policy.
-    ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305';
-
-    # Optional DH param (generate with openssl and set path)
-    ssl_dhparam /etc/ssl/certs/dhparam.pem;   # generate if you want: openssl dhparam -out /etc/ssl/certs/dhparam.pem 2048
-
-    # OCSP stapling (requires valid certs and correct CA chain)
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+    
+    # Modern cipher suite (as of 2023)
+    ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    # Enable 0-RTT for TLS 1.3 (be cautious with state-changing requests)
+    ssl_early_data on;
+    
+    # Enable OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
-
-    ## -----------------------
-    ## Compression: gzip + optional brotli
-    ## -----------------------
+    
+    # Enable HTTP/2 and HTTP/3 (QUIC)
+    # -------------------------------
+    http2 on;
+    http2_max_concurrent_streams 100;
+    http2_stream_buffer_size 256k;
+    
+    # Uncomment for HTTP/3 (requires Nginx 1.25+ with QUIC module)
+    # quic_retry on;
+    # add_header Alt-Svc 'h3=":443"; ma=86400, h3-29=":443"; ma=86400';
+    
+    # Compression
+    # ----------
     gzip on;
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 5;
+    gzip_comp_level 6;
     gzip_min_length 256;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/ld+json;
-
-    # If your Nginx has brotli module, enable instead/beside gzip:
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
+    
+    # Brotli compression (if installed)
     # brotli on;
-    # brotli_comp_level 5;
-    # brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/ld+json;
-
-    ## -----------------------
-    ## Caching (proxy cache for upstream responses)
-    ## -----------------------
-    proxy_cache_path /var/cache/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:100m inactive=60m max_size=10g;
+    # brotli_comp_level 6;
+    # brotli_static on;
+    # brotli_types *;  # Match all MIME types
+    
+    # Security Headers
+    # ---------------
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), midi=(), sync-xhr=(), microphone=(), camera=(), magnetometer=(), gyroscope=(), fullscreen=(self), payment=()" always;
+    
+    # HSTS (uncomment after testing SSL)
+    # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    
+    # Rate limiting
+    # ------------
+    limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=10r/s;
+    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+    
+    # Cache configuration
+    # -----------------
+    proxy_cache_path /var/cache/nginx/proxy_cache 
+        levels=1:2 
+        keys_zone=proxy_cache:100m 
+        inactive=60m 
+        max_size=10g 
+        use_temp_path=off;
+    
     proxy_temp_path /var/cache/nginx/proxy_temp;
-
-    ## -----------------------
-    ## Rate limiting / connection limiting
-    ## -----------------------
-    limit_conn_zone $binary_remote_addr zone=addr:10m;
-    limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=20r/s;
-
-    ## -----------------------
-    ## Log format (adds request_time)
-    ## -----------------------
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for" $request_time';
-
-    access_log /var/log/nginx/access.log main;
-
-    ## -----------------------
-    ## Include site-specific confs (recommended)
-    ## -----------------------
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # load virtual hosts
-    include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
-
-    ## -----------------------
-    ## Security headers snippet (can be included in servers)
-    ## -----------------------
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
-    }
-
-    # Deny suspicious user agents (example)
-    # map $http_user_agent $blocked_ua {
-    #     default 0;
-    #     "~*malicious" 1;
-    # }
-    # if ($blocked_ua) { return 444; }
-
-    ## -----------------------
-    ## Internal status endpoint (protected)
-    ## -----------------------
-    server {
-        listen 127.0.0.1:8080;
-        server_name localhost;
-        location /nginx_status {
-            stub_status;
-            allow 127.0.0.1;
-            deny all;
-        }
-        access_log off;
-    }
-
-    ## -----------------------
-    ## Upstream (example: app servers)
-    ## -----------------------
-    upstream backend_app {
-        # list your app instances here (use private IPs or unix sockets)
-        server 127.0.0.1:3000 max_fails=3 fail_timeout=30s;
-        server 127.0.0.1:3001 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    ## -----------------------
-    ## Example default site (HTTP -> HTTPS redirect)
-    ## -----------------------
+    
+    # Logging format
+    # -------------
+    log_format main '$remote_addr - $remote_user [$time_local] '
+                   '"$request" $status $body_bytes_sent "$http_referer" '
+                   '"$http_user_agent" "$http_x_forwarded_for" '
+                   'rt=$request_time uct="$upstream_connect_time" '
+                   'uht="$upstream_header_time" urt="$upstream_response_time"';
+    
+    access_log /var/log/nginx/access.log main buffer=512k flush=1m;
+    
+    # Server blocks
+    # ------------
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name example.com www.example.com;
-        server_tokens off;
-
-        # Let's redirect all to https
-        location /.well-known/acme-challenge/ {
-            # Allow Let's Encrypt ACME challenge to pass through
-            root /var/www/letsencrypt;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
+        
+        # Redirect all HTTP to HTTPS
+        return 301 https://$host$request_uri;
     }
-
-    ## -----------------------
-    ## HTTPS server block (main)
-    ## -----------------------
+    
     server {
+        # HTTP/2 with SSL
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
+        
+        # HTTP/3 (QUIC) - uncomment if supported
+        # listen 443 quic reuseport;
+        # listen [::]:443 quic reuseport;
+        
         server_name example.com www.example.com;
-
-        # TLS certs - replace with your real cert + key paths (PEM)
-        ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-        # ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
-
-        # Security headers (adjust CSP to your app)
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-
-        # Content-Security-Policy: tailor to your app, don't use this blindly
-        # add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https:; object-src 'none';" always;
-
-        # Logging / limits
-        access_log /var/log/nginx/example.access.log main;
-        error_log /var/log/nginx/example.error.log warn;
-
-        # Limit connections & requests per IP
-        limit_conn addr 10;
-        limit_req zone=req_limit_per_ip burst=40 nodelay;
-
-        # Protect from too slow slowloris style attacks with timeouts above
-
-        ## Static files - cache aggressively
-        location ~* \.(?:css|js|jpg|jpeg|png|gif|ico|svg|woff2|ttf|eot|otf|mp4|webm)$ {
-            root /var/www/example.com/html;
-            try_files $uri =404;
-            expires 30d;
-            add_header Cache-Control "public, must-revalidate";
+        
+        # SSL certificates
+        ssl_certificate /etc/ssl/certs/example.com.crt;
+        ssl_certificate_key /etc/ssl/private/example.com.key;
+        
+        # Security headers
+        server_tokens off;
+        
+        # Root and index files
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        
+        # Static file handling
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff2?|svg|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, no-transform";
             access_log off;
+            log_not_found off;
+            
+            # Enable gzip for static files
+            gzip_static on;
         }
-
-        ## Health check endpoint (example)
-        location = /healthz {
-            proxy_pass http://backend_app/healthz;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 5s;
-            allow 127.0.0.1;    # lock to trusted networks if possible
-            allow 10.0.0.0/8;
-            deny all;
-        }
-
-        ## Main reverse proxy to backend app
-        location / {
-            proxy_pass http://backend_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # API proxy configuration
+        location /api/ {
+            proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-
-            # timeouts for upstream
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-
-            # buffers (tweak if you proxy large headers/responses)
-            proxy_buffer_size 8k;
-            proxy_buffers 4 32k;
-            proxy_busy_buffers_size 64k;
-
-            # Enable proxy cache for GETs if your app is cacheable (adjust rules)
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Cache settings
             proxy_cache proxy_cache;
-            proxy_cache_bypass $http_cache_control;
+            proxy_cache_key "$scheme$request_method$host$request_uri";
             proxy_cache_valid 200 302 10m;
             proxy_cache_valid 404 1m;
-            add_header X-Proxy-Cache $upstream_cache_status;
+            
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Buffer settings
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
         }
-
-        ## Deny access to hidden files
+        
+        # Health check endpoint
+        location /health {
+            access_log off;
+            add_header Content-Type text/plain;
+            return 200 'OK';
+        }
+        
+        # Nginx status endpoint (restricted)
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            allow 127.0.0.1;
+            deny all;
+        }
+        
+        # Security: Block hidden files
         location ~ /\.(?!well-known) {
             deny all;
             access_log off;
             log_not_found off;
         }
-
-        ## Error pages - serve local static pages (customize)
+        
+        # Custom error pages
+        error_page 404 /404.html;
         error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
     }
-
-    ## -----------------------
-    ## Optional: Admin / management server (on a private IP)
-    ## -----------------------
-    # server {
-    #     listen 127.0.0.1:8443 ssl;
-    #     server_name internal.example.com;
-    #     ssl_certificate /path/to/cert.pem;
-    #     ssl_certificate_key /path/to/key.pem;
-    #     location / {
-    #         proxy_pass http://127.0.0.1:9000;
-    #     }
-    # }
-
+    
+    # Include additional configs
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
