--- a/package.json
+++ b/package.json
@@ -72,11 +72,12 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
-    "swagger-jsdoc": "^3.7.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "vitest": "^3.2.4",
     "winston": "^3.17.0",
@@ -117,12 +118,13 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.3",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
-    "commitizen": "^4.3.1",
+    "commitizen": "^3.0.0",
     "cz-conventional-changelog": "^3.0.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
