--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv-safe": "^9.1.0",
     "ejs": "^3.1.10",
     "env-var": "^7.5.0",
@@ -63,6 +65,7 @@
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "figlet": "^1.8.2",
+    "fs-extra": "^11.3.2",
     "gradient-string": "^3.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.1",
@@ -77,7 +80,7 @@
     "otp-generator": "^4.0.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
-    "swagger-jsdoc": "^6.2.8",
+    "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^5.0.1",
     "vitest": "^3.2.4",
     "winston": "^3.17.0",
@@ -105,10 +108,12 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/csurf": "^1.11.5",
+    "@types/date-fns": "^2.5.3",
     "@types/dotenv-safe": "^8.1.6",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/figlet": "^1.7.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -124,7 +129,7 @@
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
-    "commitizen": "^3.0.0",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.0.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
