--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/otp-generator": "^4.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
@@ -82,6 +83,7 @@
     "rimraf": "^6.0.1",
     "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "vitest": "^3.2.4",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
